# sea-mt-translationese

./: .asnotesignore  .gitignore  .gitmodules  README.md  accelerate_single_gpu_config.yaml  pyproject.toml
.asnotes/: index.db
configs/: accelerate_ds_with_autotuning_config.yaml  accelerate_multi_gpu_config.yaml  accelerate_single_gpu_config.yaml  accelerate_torchao_config.yaml  dpo.yaml  ds_autotuning_config.json  ds_config.json  sft.yaml  train.yaml
data/: clean_dataset.ipynb  prep_dataset.ipynb
evaluation/predictions/_baseline/: apertus-sealion-8b-it_ALT_predictions.json  apertus-sealion-8b-it_ntrex-128_predictions.json  gemma-sealion-27b-it_ALT_predictions.json  gemma-sealion-27b-it_ntrex-128_predictions.json  (+10 more)
evaluation/results/: Apertus-SEA-LION-v4-8B-IT-SFT_en_ms_ntrex-128_results.json  Apertus-SEA-LION-v4-8B-IT-SFT_en_ms_ntrex-128_results_v0.json  Qwen-SEA-LION-v4-32B-IT-SFT_en_ms_ntrex-128_results.json
evaluation/scores/: write_table.ipynb
evaluation/t-index_results_ntrex/: synthetic_enms_supervised_dpo_results.jsonl  synthetic_enms_supervised_rm_results.jsonl  synthetic_enms_unsupervised_results.jsonl
journals/: 2026-04-22.md  2026-04-30.md
notes/: Brain Dump.md  Overview.md  Progress Log.md
notes/journals/: 2026-04-15.md
scripts/: eval.sh  gen.sh  infer_t-index.sh  run.sh  run_metrics.sh  sft.sh  train.sh  train_t-index.sh  translationese_train.sh
src/evaluation/: comet_eval.py  ensemble_model.py  eval.py  gen.py  t_eval.py  utils.py
src/train/: data_utils.py  sft.py  train.py  utils.py
t-index/recipes/: synthetic_enms.yaml  t_eval.yaml  wild.yaml
t-index/scripts/: run.sh
t-index/src/: cpo.py  generate_data.py  main.py  preprocess_data.py  preprocess_results.ipynb  t_index.py  utils.py
t-index/src_reproduce/: score_functions.py  supervised.py  unsupervised.py
t_index/analysis/: produce_table.ipynb  results.txt
t_index/recipes/: synthetic_enms.yaml  train.yaml  training_args.yaml  wild.yaml
t_index/scripts/: gen.sh  run.sh
t_index/src/: binary_cross_trainer.py  cpo.py  data_augmentation.py  data_utils.py  ensemble_trainer.py  generate_data.py  main.py  preprocess_data.py  score_functions.py  train.py  unsupervised.py
t_index/src_reproduce/: unsupervised.py
t_index/tests/: data_utils.py  ensemble.py  ensemble_train.py  joint_train.ipynb  joint_train.py  load_model.ipynb  trainer.py  utils.py
tests/: check_processor.ipynb
wandb/: latest-run
wandb/run-20260327_030300-d5gb8pyp/: run-d5gb8pyp.wandb
wandb/run-20260327_030553-413qazqk/: run-413qazqk.wandb
(+210 files in other folders)
